--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DataContext": "Server=localhost, 1433;Database=Reactivities;User Id=sa;Password=.netReact973;MultipleActiveResultSets=true;"
   }
 }
