Created first migration and started the controller

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DataContext": "Server=localhost,1433;Database=Reactivities;User ID=sa;Password=.netReact973;MultipleActiveResultSets=true;"
+  }
 }
