--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DataContext": "Server=localhost, 1433;Database=Reactivities;User Id=sa;Password=.netReact973;MultipleActiveResultSets=true;"
+    "DataContext": "Server=localhost,1433;Database=Reactivities;User ID=sa;Password=.netReact973;MultipleActiveResultSets=true;TrustServerCertificate=true"
   }
 }
